# Math_Proof

./: .editorconfig  CMakeLists.txt  Math.tex  logic.tex  run.sh  set.tex
Math_Proof/: Proposition.cpp  Proposition.hpp  expression.cpp  expression.hpp  main.cpp  statement.cpp  statement.hpp
Math_Proof/Content/: logic.cpp  logic.hpp  set.cpp  set.hpp
src/: expression.cpp  expression.hpp  main.cpp  statement.cpp  statement.hpp
src/Content/: logic.cpp  set.cpp
tex/: logic.tex  set.tex
